# robo-inspecto

./: README.md
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  macro.ros2_control.xacro  macro.srdf  macro.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
my_scan_package/: package.xml  setup.cfg  setup.py
my_scan_package/my_scan_package/: my_scan_node.py
robo_inspecto_description/: CMakeLists.txt  package.xml
robo_inspecto_description/meshes/: frame.STL  lager.STL
robo_inspecto_description/urdf/: frame.urdf.xacro  macro.urdf.xacro  robot.urdf.xacro
robo_inspecto_hardware/: CMakeLists.txt  package.xml  robo_inspecto_hardware.xml
robo_inspecto_hardware/include/robo_inspecto_hardware/: motor_hardware.hpp  visibility_control.h
robo_inspecto_hardware/src/: motor_hardware.cpp
robo_inspecto_hardware/test/: test_motor_hardware.cpp
robo_inspecto_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robo_inspecto_launch/launch/: display_urdf_launch.py  robo_inspecto_launch.py
robo_inspecto_launch/meshes/: rails.STL  slede.STL
robo_inspecto_launch/urdf/: frame.urdf.xacro  macro.urdf.xacro  robot.urdf.xacro  slede.urdf.xacro
robo_inspecto_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robo_inspecto_moveit_config/config/: initial_positions.yaml  kinematics.yaml  macro.ros2_control.xacro  macro.srdf  macro.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
robo_inspecto_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur_control.launch.py  ur_moveit.launch.py
